Fri Nov  3 15:16:22 CET 2006 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/ds/Vertex.java
	  src/org/jcae/mesh/amibe/metrics/Quadric3DError.java
	  src/org/jcae/mesh/amibe/algos3d/DecimateHalfEdge.java
	  src/org/jcae/mesh/amibe/algos3d/DecimateVertex.java: In Decimate*
	algorithms, reuse v3 to avoid allocating new Vertex instances.

Fri Nov  3 12:20:09 CET 2006 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/ds/OTriangle.java: Let computeNormal3D()
	and computeNormal3DT() return triangle area instead of 2*area.
	This does not change current computations, but is less confusing.
	* src/org/jcae/mesh/amibe/ds/Vertex.java (clone): Revert previous
	optimization, it was plain broken.

Thu Nov  2 17:29:22 CET 2006 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/metrics/Matrix3D.java: New
	apply(double [] in, double [] out) method to reduce array allocation.
	* src/org/jcae/mesh/amibe/metrics/Quadric3DError.java: Use it.
	* src/org/jcae/mesh/amibe/metrics/Quadric3DError.java: Replace
	Quadric3DError(q1,q2) constructor by a new computeQuadric3DError(q1,q2)
	method.
	* src/org/jcae/mesh/amibe/algos3d/DecimateHalfEdge.java
	  src/org/jcae/mesh/amibe/algos3d/DecimateVertex.java: Reuse existing
	Quadric3DError instances to avoid allocations.  The nodeset variable
	is not really useful, so drop it.
	* src/org/jcae/mesh/amibe/util/PAVLSortedTree.java (update): When
	a node value is modified, internal map does not have to be touched.

Thu Nov  2 10:06:08 CET 2006 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/algos3d/DecimateVertex.java: Apply
	yesterday's optimization to DecimateVertex too.

Wed Nov  1 18:04:40 CET 2006 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/algos3d/DecimateHalfEdge.java: Some edges
	cannot be contracted because of geometry or topology reasons.  A
	penalty is now added to these edges so that they are not processed